adding more publications info

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -96,6 +96,7 @@ url={papers/txcache-osdi10.pdf},
   title =        {Efficient File Distribution in a Flexible, Wide-Area File System},
   school =       {Massachusetts Institute of Technology},
   year =         2009,
+  month= 6,
   url={papers/meng-thesis.pdf}}
 
 @TechReport{peter14-arrak,
