removing some folders

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -146,15 +146,15 @@
     \begin{rentry}{Customizable and Extensible Deployment for
         Mobile/Cloud Applications}{}
       Sapphire is a new distributed programming platform that provides
-      *customizable* and *extensible* deployment of mobile/cloud
-      applications. Rather than directly deploying the application,
-      application programmers use a library of deployment managers,
-      which customize the platform for their application. Further,
-      Sapphire has an interface for developing new deployment
-      managers, allowing programmers to extend the platform. This
-      flexibility enables programmers to separate deployment logic
-      from their application, while maintaining fine-grained control
-      over performance trade-offs.
+      \emph{customizable} and \emph{extensible} deployment of
+      mobile/cloud applications. Rather than directly deploying the
+      application, application programmers use a library of deployment
+      managers, which customize the platform for their
+      application. Further, Sapphire has an interface for developing
+      new deployment managers, allowing programmers to extend the
+      platform. This flexibility enables programmers to separate
+      deployment logic from their application, while maintaining
+      fine-grained control over performance trade-offs.
     \end{rentry}
 
     \begin{rentry}{Arrakis}{}
