updating webpage and fonts

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -82,7 +82,7 @@ url={papers/txcache-osdi10.pdf},
 }
 
 @InProceedings{peter14:_towar_high_perfor_applic_level_storag_manag,
-  author = 	 {Simon Peter and Irene Zhang and Dan R. K. Ports and Jialin Li and Doug Woos and Thomas Anderson and Arvind Krishnamurthy and Mark Zbikowski},
+  author = 	 {Simon Peter and Jialin Li and Doug Woos and Irene Zhang and Dan R. K. Ports and Thomas Anderson and Arvind Krishnamurthy and Mark Zbikowski},
   title = 	 {Towards High-Performance Application-Level Storage Management},
   booktitle = hot_storage,
   year = 	 2014,
