adding some posts

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -222,20 +222,20 @@
 %  \end{rsection}
 \vspace{1.0em}
  \begin{rsection}{Publications}
-   I. Zhang, N. Sharma, A. Szekeres, D. Ports,
+   I. Zhang, N. K. Sharma, A. Szekeres, D. R. K. Ports,
    A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase Commit.}
    In submission.\\\vspace{-0.5em}
 
-   I. Zhang, A. Szekeres, D. Van Aken, I. Ackerman, S. Gribble,
+   I. Zhang, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
      Deployment for Mobile/Cloud Applications.} In
    submission.\\\vspace{-0.5em}
 
-   S. Peter, J. Li, D. Woos, I. Zhang, D. Ports, A. Krishnamurthy,
+   S. Peter, J. Li, D. Woos, I. Zhang, D. R. K. Ports, A. Krishnamurthy,
    T. Anderson, T. Roscoe. \textit{Arrakis: The Operating System is
      the Control Plane.} In submission.\\\vspace{-0.5em}
 
-   S. Peter, J. Li, D. Woos, I. Zhang, D. Ports, T. Anderson,
+   S. Peter, J. Li, D. Woos, I. Zhang, D. R. K. Ports, T. Anderson,
    A. Krishnamurthy, M. Zbikowski. \textit{Towards High-Performance
      Application-Level Storage Management.} In Proc. of HotStorage
    '14. \\\vspace{-0.5em}
@@ -244,30 +244,91 @@
       VM Checkpointing for Restore Performance in VMware ESXi.} In
     Proc. of USENIX ATC '13. San Jose, CA. June 2013.\\\vspace{-0.5em}
 
-    I. Zhang, A. Garthwaite, Y. Baskakov, K. Barr. \textit{Fast
+    I. Zhang, A. Garthwaite, Y. Baskakov, K. C. Barr. \textit{Fast
       Restore of Checkpointed Memory Using Working Set
       Estimation.} In Proc. of VEE '11. Newport Beach, CA. March
     2011.\\\vspace{-0.5em}
 
-    D. Ports, A. Clements, I. Zhang, S. Madden,
+    D. R. K. Ports, A. Clements, I. Zhang, S. Madden,
     B. Liskov. \textit{Transactional Consistency and Automatic
       Management in an Application Data Cache.} In Proc. of OSDI
     '10. Vancouver, Canada. October 2010.\\\vspace{-0.5em}
 
     J. Stribling, Y. Sovran, I. Zhang, X. Pretzer, J. Li,
-    F. Kaashoek, R. Morris. \textit{Flexible, Wide-Area Storage for
+    M. F. Kaashoek, R. Morris. \textit{Flexible, Wide-Area Storage for
       Distributed Systems with WheelFS.} In Proc. of NSDI '09. Boston,
-    MA. April 2009.\\\vspace{-0.5em}
-    
-    I. Zhang, A. Garthwaite, Y. Baskakov, K. Barr, J. Pool,
+    MA. April 2009.
+ \end{rsection}
+
+  \begin{rsection}{Posters \&\\Extended\\Abstracts}
+   I. Zhang, N. K. Sharma, A. Szekeres, D. R. K. Ports,
+   A. Krishnamurthy. \textit{Optimistic, Replicated Two-Phase Commit.}
+   Poster at APSys '14. Beijing, China. June 2014.\\\vspace{-0.5em}
+
+    I. Zhang, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
+   A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
+     Deployment for Mobile/Cloud Applications.} Work-in-Progress talk
+   at SOSP '13. Farmington, PA. November 2013.\\\vspace{-0.5em}
+
+    I. Zhang, A. Garthwaite, Y. Baskakov, K. C. Barr, J. Pool,
     K. Christopher. \textit{Fast Restore of Checkpointed Memory Using
       Working Set Estimation.} Poster at SOSP '09. Big Sky,
     MT. October 2009.\\\vspace{-0.5em} 
- 
-   I. Zhang, K. Barr. \textit{Improving VMware Workstation Restore
+
+   I. Zhang, K. C. Barr. \textit{Improving VMware Workstation Restore
       using Working Set Estimation.} Poster at VMworld '08. Las Vegas,
     NV. September 2008.
- \end{rsection}
+  \end{rsection}
+
+  \vspace{1.0em}
+  \begin{rsection}{Patents}
+    US Patent App. 12/559,484.\\
+    Saving and Restoring State Information for Virtualized Computer Systems.\\
+    I. Zhang, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
+    
+  \end{rsection}
+
+  % \begin{rsection}{Talks}
+  %   Saving and Restoring State Information for Virtualized Computer Systems.
+  %   I. Zhang, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.
+  %   US Patent App. 12/559,484.
+  % \end{rsection}
+
+\end{rtable}
+
+\begin{rtable}
+  \vspace{1.0em}
+  \begin{rsection}{Work\\Experience}
+    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
+      \rline{MTS, Virtual Machine Monitor
+        Group}{Jan 2010 - Feb 2013}
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
+      \rline{R\&D Intern, Virtual Machine Monitor Group}{Jul - Dec 2009}
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
+      \rline{R\&D Intern, Core Performance Group}{Jun - Aug 2008}
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{Quickware Engineering and Design}{Waltham, MA}
+      \rline{Engineering Intern}{Jun - Aug 2007} 
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{Cummins, Inc.}{Columbus, IN}
+      \rline{Engineering Intern, Analysis Led Design}{Jun - Aug 2005}
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{Cummins, Inc.}{Beijing, China}
+      \rline{International Business Intern}{Jun - Jul 2004} 
+      \vspace{-.5em}
+    \end{rentry}
+    \begin{rentry}{ArvinMeritor, Inc.}{Columbus, IN}
+      \rline{Web Development Intern}{Aug 2003 - May 2004}
+      \vspace{-.5em}
+    \end{rentry}
+  \end{rsection}
 
   \vspace{1.0em}
   \begin{rsection}{Teaching}
@@ -303,10 +364,23 @@
       such as recursion, abstraction and OOP.
     \end{rentry}
   \end{rsection}
+
+  \vspace{1.0em}
+  \begin{rsection}{Service}
+    \begin{rentry}{UW Visit Days 2014}{}
+      Organized and ran the Visit Days for PhD students in the
+      Computer Science and Engineering Department.
+    \end{rentry}    
+
+    \begin{rentry}{Women's Outreach at VMware}{}
+      Organized and led events to recruit and support women in
+      computer science programs around the country.
+    \end{rentry}    
+  \end{rsection}
 \end{rtable}
 
 \begin{rtable}
-\vspace{1.0em}
+  \vspace{1.0em}
   \begin{rsection}{Honors and\\Awards}
     \begin{rentry}{National Science Board Annual Board Meeting Student
         Panel}{2013}
@@ -334,39 +408,6 @@
     \begin{rentry}{Northern Telecom/BNR Award for Best Undergrad. Lab Project}{2006}
     \end{rentry}
   \end{rsection}
-  \vspace{1.0em}
-  \begin{rsection}{Work\\Experience}
-    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
-      \rline{MTS, Virtual Machine Monitor
-        Group}{Jan 2010 - Feb 2013}
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
-      \rline{R\&D Intern, Virtual Machine Monitor Group}{Jul - Dec 2009}
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{VMware, Inc.}{Cambridge, MA}      
-      \rline{R\&D Intern, Core Performance Group}{Jun - Aug 2008}
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{Quickware Engineering and Design}{Waltham, MA}
-      \rline{Engineering Intern}{Jun - Aug 2007} 
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{Cummins, Inc.}{Columbus, IN}
-      \rline{Engineering Intern, Analysis Led Design}{Jun - Aug 2005}
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{Cummins, Inc.}{Beijing, China}
-      \rline{International Business Intern}{Jun - Jul 2004} 
-      \vspace{-.5em}
-    \end{rentry}
-    \begin{rentry}{ArvinMeritor, Inc.}{Columbus, IN}
-      \rline{Web Development Intern}{Aug 2003 - May 2004}
-      \vspace{-.5em}
-    \end{rentry}
-  \end{rsection}
-
   \vspace{-1em}  
 \end{rtable}
 \end{document}
