updates to cv and teaching, optimization to Google font

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -405,6 +405,10 @@
 %       Computer Science and Engineering Department.
 %     \end{rentry}    
 
+%     \begin{rentry}{UW Graduate Student Mentor 2014}{}
+%       Mentor new graduate students in the department.
+%     \end{rentry}
+
 %     \begin{rentry}{Women's Outreach at VMware}{}
 %       Organized and led events to recruit and support women in
 %       computer science programs around the country.
