updating cv and website with OSDI 14 publications

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -6,7 +6,21 @@
 @string{vee = "Proceedings of the International Conference on Virtual Execution Environments (VEE)"}
 @string{hot_storage = "Proceedings of the USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage)"}
 
+@InProceedings{zhang14-custom_exten_deploy_mobil_cloud_applic,
+  author = 	 {Irene Zhang and Adriana Szekeres and Dana Van Aken and Isaac Ackerman and Arvind Krishnamurthy and Henry M. Levy and Steven D. Gribble}, 
+  title = 	 {Customizable and Extensible Deployment for Mobile/Cloud Applications},
+  booktitle =  osdi,
+  year = 	 2014,
+  month = 10
+}
 
+@InProceedings{peter14-custom_exten_deploy_mobil_cloud_applic,
+  author = 	 {Simon Peter and Jialin Li and Irene Zhang and Dan R. K. Ports and Douglas Woos and Arvind Krishnamurthy and Thomas Anderson and Timothy Roscoe},
+  title = 	 {Arrakis: The Operating System is the Control Plane},
+  booktitle =  osdi,
+  year = 	 2014,
+  month = 10
+}
 
 @InProceedings{irene13-optim_vm_check_restor_perfor_vmwar_esxi,
   author = 	 {Irene Zhang and Tyler Denniston and Yury Baskakov and Alex Garthwaite},
