--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -228,12 +228,11 @@
 
    \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
-     Deployment for Mobile/Cloud Applications.} In
-   submission.\\\vspace{-0.5em}
+     Deployment for Mobile/Cloud Applications.} In Proc. of OSDI '14.\\\vspace{-0.5em}
 
    S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, A. Krishnamurthy,
    T. Anderson, T. Roscoe. \textit{Arrakis: The Operating System is
-     the Control Plane.} In submission.\\\vspace{-0.5em}
+     the Control Plane.} In Proc. of OSDI '14.\\\vspace{-0.5em}
 
    S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, T. Anderson,
    A. Krishnamurthy, M. Zbikowski. \textit{Towards High-Performance
