--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -124,7 +124,7 @@
   \end{rsection}
 
   \begin{rsection}{Interests}
-    Operating systems, virtualization, distributed systems and networking
+    Operating systems, distributed systems, virtualization and networking
   \end{rsection}
   
   \begin{rsection}{Research}
@@ -133,29 +133,27 @@
       TAPIR (Transactional Application Protocol for Inconsistent
       Replication) provides externally consistent transactions using a
       replication protocol with \emph{no consistency guarantees}.
-      Removing consistency from the replication protocol allows TAPIR
-      to eliminate coordination between replicas required by
-      consistent replication protocols like Paxos. TAPIR commits
-      transactions \emph{in a single round-trip}, half the latency of
-      conventional transaction protocols that rely on consistent
-      replication, and eliminates the need for a Paxos leader, a
-      throughput bottleneck in conventional protocols.
+      Unlike conventional protocols that use Paxos, TAPIR does not
+      require a Paxos leader or coordination between replicas in a
+      shard. Thus, TAPIR can commit a transaction \emph{in a single
+        round-trip} and eliminate the bottleneck at the Paxos leader.
     \end{rentry}
 
     \begin{rentry}{Customizable and Extensible Deployment for
         Mobile/Cloud Applications}{}
       Sapphire is a new distributed programming platform providing
       customizable and extensible deployment of mobile/cloud
-      applications. The key concept is an architecture that supports
-      \emph{deployment managers}, which solve complex distributed
-      systems tasks, such as fault-tolerance, code-offloading, and
-      caching, for a piece of a distributed application. Rather than
-      writing distributed systems code, programmers choose a number of
-      deployment managers from a library to compose a custom
-      deployment platform to meet their application's needs.
+      applications, like Twitter, Facebook and Google Docs. Sapphire
+      has a new architecture that supports \emph{deployment
+        managers}. Deployment managers are pluggable and extensible
+      modules which implement complex distributed systems tasks, such
+      as fault-tolerance, code-offloading, and caching. Rather than
+      writing distributed systems code, application programmers choose
+      a number of deployment managers from a library to compose a
+      custom deployment platform to meet their application's needs.
     \end{rentry}
 
-    \begin{rentry}{Arrakis}{}
+    \begin{rentry}{Arrakis: The Operating System is the Control Plane}{}
       Arrakis is a new operating system that provides high performance
       I/O by taking advantage of hardware virtualization
       technology. Hardware virtualization technologies are designed to
@@ -225,13 +223,19 @@
      Inconsistent Replication.}
    In submission.\\\vspace{-0.5em}
 
+   % A. Szekeres, \textbf{I. Zhang}, I. Ackerman, F. Roesner,
+   % D. R. K. Ports, A. Krishnamurthy, H. Levy. \textit{User-controlled
+   %   Privacy: Enforcing Privacy Policies on Mobile/Cloud
+   %   Applications.}  In submission.\\\vspace{-0.5em}
+
    \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
      Deployment for Mobile/Cloud Applications.} In Proc. of OSDI '14.\\\vspace{-0.5em}
 
-   S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, A. Krishnamurthy,
-   T. Anderson, T. Roscoe. \textit{Arrakis: The Operating System is
-     the Control Plane.} In Proc. of OSDI '14. Best Paper Award.\\\vspace{-0.5em}
+   S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports,
+   A. Krishnamurthy, T. Anderson, T. Roscoe. \textit{Arrakis: The
+     Operating System is the Control Plane.} In Proc. of OSDI
+   '14. \textbf{Best Paper Award.}\\\vspace{-0.5em}
 
    S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, T. Anderson,
    A. Krishnamurthy, M. Zbikowski. \textit{Towards High-Performance
