other change to my cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -150,9 +150,9 @@
       \emph{deployment managers}, which solve complex distributed
       systems tasks, such as fault-tolerance, code-offloading, and
       caching, for a piece of a distributed application. Rather than
-      writing distributed systems code, programmers choose a number of
-      deployment managers from a library to compose a custom
-      deployment platform to meet their application's needs.
+      writing distributed systems code, programmers compose a custom
+      deployment platform using deployment managers to meet their
+      application's needs.
     \end{rentry}
 
     \begin{rentry}{Arrakis}{}
@@ -231,7 +231,7 @@
 
    S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, A. Krishnamurthy,
    T. Anderson, T. Roscoe. \textit{Arrakis: The Operating System is
-     the Control Plane.} In Proc. of OSDI '14. Best Paper Award.\\\vspace{-0.5em}
+     the Control Plane.} In Proc. of OSDI '14. \textbf{Best Paper Award}.\\\vspace{-0.5em}
 
    S. Peter, J. Li, D. Woos, \textbf{I. Zhang}, D. R. K. Ports, T. Anderson,
    A. Krishnamurthy, M. Zbikowski. \textit{Towards High-Performance
