Updates to add Agate and rename TAPIR

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -58,7 +58,8 @@
                   its power by showing 2-5x end-to-end latency and 9x
                   throughput improvements for a popular persistent
                   NoSQL store relative to a well-tuned Linux
-                  implementation.}
+                  implementation.},
+note= {Best Paper Award}
 }
 
 @InProceedings{irene13-optim_vm_check_restor_perfor_vmwar_esxi,
