--- a/_posts/2014-10-08-osdi.md
+++ b/_posts/2014-10-08-osdi.md
@@ -1,5 +1,9 @@
 ---
 layout: post
+title: The systems lab girls at OSDI!
 ---
-The systems lab girls at OSDI!
+
+The systems lab girls take OSDI! Other than the sleepless nights, we
+all had a great time.
+
 ![Systems lab girls]({{ site.url }}/img/syslab-girls-osdi.JPG)
