adding some missing things?

--- a/_posts/2014-06-27-apsys.md
+++ b/_posts/2014-06-27-apsys.md
@@ -2,6 +2,6 @@
 layout: post
 shortnews: true
 ---
-I presented a poster on on [OR-2PC](research/or-2pc/) at [APSys 2014][apsys]. The poster can be found [here](papers/or2pc-poster.pdf).
+I presented a poster on on [TAPIR](research/tapir/) at [APSys 2014][apsys]. The poster can be found [here](papers/or2pc-poster.pdf).
 
 [apsys]: http://acs.ict.ac.cn/apsys2014/
