--- a/_posts/2014-10-06-osdi.md
+++ b/_posts/2014-10-06-osdi.md
@@ -2,5 +2,4 @@
 layout: post
 shortnews: true
 ---
-Arrakis wins the best paper award at OSDI and I finished my talk on Sapphire today! See video of [my talk]((https://www.usenix\
-.org/conference/osdi14/technical-sessions/presentation/zhang).
+Arrakis wins the best paper award at OSDI and I gave my talk on Sapphire today! See video of [my talk](https://www.usenix.org/conference/osdi14/technical-sessions/presentation/zhang).
