--- a/_posts/2014-10-08-osdi.md
+++ b/_posts/2014-10-08-osdi.md
@@ -3,7 +3,5 @@ layout: post
 shortnews: true
 ---
 
-The systems lab girls take OSDI! Other than the sleepless nights, we
-all had a great time.
-
+The systems lab girls take OSDI!
 ![Systems lab girls]({{ base.url }}/img/syslab-girls-osdi.JPG)
