adding some patents to my cv

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -225,17 +225,18 @@
 %     \end{rentry}
 %  \end{rsection}
 \vspace{1.0em}
- \begin{rsection}{Publications}
+\begin{rsection}{In Submission}
    \textbf{I. Zhang}, N. K. Sharma, A. Szekeres, D. R. K. Ports,
    A. Krishnamurthy. \textit{Building Consistent Transactions with
-     Inconsistent Replication.}
-   In submission.\\\vspace{-0.5em}
+     Inconsistent Replication.}\\\vspace{-0.5em}
 
    A. Szekeres, \textbf{I. Zhang}, I. Ackerman, F. Roesner,
    D. R. K. Ports, A. Krishnamurthy, H. Levy. \textit{User-controlled
      Privacy: Enforcing Privacy Policies on Mobile/Cloud
-     Applications.}  In submission.\\\vspace{-0.5em}
-
+     Applications.}\\\vspace{-0.5em}
+\end{rsection}
+  
+ \begin{rsection}{Conference\\Publications}
    \textbf{I. Zhang}, A. Szekeres, D. Van Aken, I. Ackerman, S. D. Gribble,
    A. Krishnamurthy, H. Levy. \textit{Customizable and Extensible
      Deployment for Mobile/Cloud Applications.} In Proc. of OSDI '14.\\\vspace{-0.5em}
@@ -295,7 +296,18 @@
     US Patent App. 12/559,484.\\
     Saving and Restoring State Information for Virtualized Computer Systems.\\
     \textbf{I. Zhang}, K. C. Barr, G. Venkitachalam, I. Ahmad, A. Garthwaite, J. Pool.\\\vspace{-0.5em}
-    
+
+    US Patent App. 13/710,185.\\
+    Method for Saving Virtual Machine State from a Checkpoint
+    File.\\
+    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.\\\vspace{-0.5em}
+
+    US Patent App. 13/710,215.\\
+    Method for Restoring Virtual Machine State from a Checkpoint
+    File.\\
+    A. Garthwaite, Y. Baskakov, \textbf{I. Zhang}, K. Christopher,
+    J. Pool.
   \end{rsection}
 
   % \begin{rsection}{Talks}
@@ -358,16 +370,16 @@
     \end{rentry}    
 
     \begin{rentry}{Computation Structures (6.004)}{Jan - Dec 2007}
-      \rline{Lab Assistant, MIT Department of EECS}{} 
-      Held office hours to help students design and build a processor
-      and small OS kernel in simulation.
+      \rline{Lab Assistant, MIT Department of EECS}{} Held office
+      hours to help students design and build a processor and small OS
+      kernel in simulation.
     \end{rentry}
 
     \begin{rentry}{Intro. to Computer Science and
         Programming (6.00)}{Sept - Dec 2006}
-      \rline{Lab Assistant, MIT Department of EECS}{} 
-      Taught students basic computer science concepts using Python
-      such as recursion, abstraction and OOP.
+      \rline{Lab Assistant, MIT Department of EECS}{} Taught students
+      basic computer science concepts such as recursion, abstraction
+      and OOP.
     \end{rentry}
   \end{rsection}
 
