changing some small nits and making a news post about Arrakis

--- a/_posts/2014-06-23-osdi.md
+++ b/_posts/2014-06-23-osdi.md
@@ -2,4 +2,4 @@
 layout: post
 shortnews: true
 ---
-My papers on Sapphire and Arrakis were accepted to [OSDI 2014](https://www.usenix.org/conference/osdi14).
+My papers on Sapphire and Arrakis will appear at [OSDI 2014](https://www.usenix.org/conference/osdi14).
